syntax="proto3";

package leopard.protobuf;
import "leopard.proto";

option java_package = "org.leopard.remote.proto.heartbeat";
option java_outer_classname = "HeartbeatProto";
option java_multiple_files = true;

message HeartbeatRequest {
  string cluster = 1;
  string server = 2;
}

message HeartbeatResponse {

}