syntax="proto3";

package shallow.protobuf;
import "shallow.proto";

option java_package = "org.shallow.proto.elector";
option java_outer_classname = "LeaderElectorProto";
option java_multiple_files = true;

message VoteRequest {
  int32 term = 1;
  int32 version = 2;
}

message VoteResponse {
  bool ack = 4;
}

message RaftHeartbeatRequest {
  int32 term = 1;
  int32 version = 2;
  string leader = 3;
  int32 distributedValue = 4;
}

message RaftHeartbeatResponse {

}

message RegisterNodeRequest {
  string cluster = 1;
  NodeMetadata metadata = 2;
}

message RegisterNodeResponse {
  string host = 1;
  int32 port = 2;
  string serverId = 3;
  string state = 4;
}

message UnRegisterNodeRequest {
  string cluster = 1;
  NodeMetadata metadata = 2;
}

message UnRegisterNodeResponse {
}